[Qt][WK2] Default directories and paths are missing for LocalStorage, Database and IconDatabase. https://bugs.webkit.org/show_bug.cgi?id=69111

Reviewed by Kenneth Rohde Christiansen.

Provide default path for LocalStorage, Database and IconDatabase using QDesktopServices.

Source/WebCore:

No new tests : existing ones should cover.

* platform/qt/CookieJarQt.cpp:
(WebCore::SharedCookieJarQt::SharedCookieJarQt):

Source/WebKit2:

* UIProcess/qt/WebContextQt.cpp:
(WebKit::defaultDataLocation):
(WebKit::WebContext::platformInitializeWebProcess):
(WebKit::WebContext::platformDefaultDatabaseDirectory):
(WebKit::WebContext::platformDefaultIconDatabasePath):
(WebKit::WebContext::platformDefaultLocalStorageDirectory):


Canonical link: https://commits.webkit.org/85463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96702 268f45cc-cd09-0410-ab3c-d52691b4dbfc